Inline JsonExportTest files
Modernize JsonExportTest, bringing the expected data closer to their
assertions.

JIRA: CONTROLLER-2159
Change-Id: I4019facf5d7c55e60b60b8aa68fb60450dd23897
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>